fixtures/success/renewGuestToken.js
module.exports = {
    guest_token: '1233421asdf',
    date: new Date().toISOString(),
    message: 'Token renewed successfully'
  };
  