fixtures/error/retrieveSong_invalidSongId.js
module.exports = {
    statusCode: 400,
    detail: 'Invalid song ObjectId'
  };
  